# epochconv

./: .gitignore  LICENSE  README.md  TODO  changelog.md  epochconv.cabal  epochconv.hs  package.yaml  stack.yaml
hsinstall/share/applications/: epochconv.desktop
src/: epochconv.hs
util/prefs/: boring
