name:                epochconv
version:             1.0
synopsis:            Show a given date (or the current date) in a variety of formats
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
copyright:           2014 Dino Morelli
category:            Application, Console
build-type:          Simple
extra-source-files:  TODO
                     util/prefs/boring
cabal-version:       >=1.10

executable epochconv
  main-is:             epochconv.hs
  -- other-modules:       
  build-depends:       base >=4.7 && <4.8,
                       old-locale,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
