name:                epochconv
version:             1.0
synopsis:            Convert between epoch and various date formats
description:         Show a given date (or the current date) in a variety of formats. This was partly an exercise in grokking the Haskell date/time APIs.
license:             BSD3
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
copyright:           2014 Dino Morelli
category:            Application, Console
build-type:          Simple
extra-source-files:  README.md
                     TODO
                     util/prefs/boring
cabal-version:       >=1.10

executable epochconv
  main-is:             epochconv.hs
  build-depends:       base >=4.7 && <4.8,
                       old-locale,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
